syntax = "proto3";

package verify;

service RpcUser {
    rpc Verify (Token) returns (UserBase);
}

message Token {
    string Token = 1;
    string Ua = 2;
}

message UserBase {
    bool Result = 1;
    int64 UserId = 2;
    string AppendJson = 3;
}